# OpenGLPlayground

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  FutureWork.txt  New Text Document.txt  NewRenderDoc.cap  OpenGLApplication.cpp  README.md  RenderDocSettings.cap  cmake.txt  profile_data.prof  vs_helper.txt
HideTests/: TestAssimp.h  TestComputeShader.h  TestDamagedHelmet.h  TestInstance.cpp  TestLights.h  TestPBR.cpp  TestPBR.h  TestScene.cpp  TestScene.h  TestTexture2D.h
OpenGLApplication/: Camera.h  IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Test.cpp  Test3D.cpp  Test3D.h  Texture.cpp  Texture.h  Utility.cpp  Utility.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp
OpenGLApplication/Tests/: TestTexture2D.cpp
configs/: metadata_shaders.json  models_config.json  shaders_config.json  textures_config.json
shaders/: BRDFCompute.comp  BRDFCompute.shader  Basic.frag  Basic.shader  Basic.vert  BasicTextured.frag  BasicTextured.vert  BistroShader.frag  BistroShader.vert  BistroShaderShadowed.frag  BistroShaderShadowed.vert  Common.shader  DebugLight.shader  DebugLights.shader  DebugLights.vert  Duck.shader  Grid.frag  Grid.vert  Helmet.shader  HelmetPBR.frag  HelmetPBR.vert  HelmetPBROld.frag  HelmetPBROld.vert  Light.shader  Lights.shader  PBR.shader  ReflectSkybox.shader  SimpleLights.frag  SimpleLights.shader  SimpleLights.vert  SimpleLightsShadowed.frag  SimpleLightsShadowed.vert  SkyBox.shader  Terrain.frag  Terrain.tesc  Terrain.tese  Terrain.vert  Wireframe.frag  Wireframe.geos  Wireframe.vert  (+3 more)
shaders/Common/: Common.shader  Lights.shader  LightsFunctions.shader  Material.shader  PBR.shader  PCF.shader  Parallax.shader
shaders/DebugGeo/: DebugLights.frag  DebugLights.vert  SkyBox.frag  SkyBox.vert
shaders/Effects/: Flipbook.frag  Flipbook.vert
shaders/OldFiles/: BistroShader.frag  EdgeDetection.shader  Instance.shader  Quad.shader  SimpleLights.shader
shaders/Postprocessing/: EdgeDetection.frag  EdgeDetection.shader  EdgeDetection.vert  NoEffect.frag  NoEffect.vert  PresentTexture.frag  PresentTexture.shader  PresentTexture.vert  ToneMapping.frag  ToneMapping.vert
shaders/Shadows/: BasicShadowMap.frag  BasicShadowMap.vert
shaders/Terrain/: Grid.vert  Terrain.frag  Terrain.tesc  Terrain.vert
src/: BaseShader.h  Camera.h  ComputeShader.cpp  ComputeShader.h  Cube.cpp  Cube.h  IndexBuffer.cpp  IndexBuffer.h  InputManager.h  InstanceBuffer.h  Lights.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLApplication.cpp  OpenGLApplication.vcxproj  RenderObject.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Application/: Application.cpp  Application.h  InputManager.cpp  InputManager.h  OpenGLApplication.cpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLPlayground.cpp
src/Core/: OpenGLContext.cpp  OpenGLContext.h  RenderObject.h  Utility.cpp
src/Core/Buffers/: InstanceBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.h
src/Core/Materials/: Material.h  Texture.h  Texture2D.cpp  Texture2D.h  TextureBase.cpp  TextureBase.h  TextureSkyBox.cpp  TextureSkyBox.h
src/Core/Shaders/: BaseShader.cpp  BaseShader.h  ComputeShader.cpp  ComputeShader.h  Shader.cpp  Shader.h
src/Graphics/Buffers/: BufferDeleter.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  IndirectBuffer.cpp  IndirectBuffer.h  InstanceBuffer.cpp  InstanceBuffer.h  MeshBuffer.cpp  MeshBuffer.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  ShadowMap.cpp  ShadowMap.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Graphics/Effects/: EffectsManager.cpp  EffectsManager.h
src/Graphics/Materials/: Material.cpp  Material.h  MaterialBuilder.h  MaterialLayout.h  MaterialManager.cpp  MaterialManager.h  MaterialParamType.h
src/Graphics/Meshes/: AllMeshes.h  BetterModelLoader.cpp  BetterModelLoader.h  Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  MeshInfo.h  MeshLayout.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Quad.cpp  Quad.h  SkyBox.cpp  SkyBox.h  Sphere.cpp  Sphere.h  StaticModelLoader.cpp  StaticModelLoader.h  (+2 more)
src/Objects/: Cube.h  Mesh.cpp  Model.h
src/Renderer/: Batch.cpp  Batch.h  BatchManager.cpp  BatchManager.h  RenderContext.h  RenderObject.cpp  RenderObject.h  RenderState.cpp  RenderState.h  Renderer.cpp  Renderer.h
src/Resources/: MaterialManager.cpp  MaterialManager.h  MeshManager.cpp  MeshManager.h  ModelLoader.cpp  ModelLoader.h  ModelManager.cpp  ModelManager.h  ResourceManager.cpp  ResourceManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
src/Scene/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  FrameData.cpp  FrameData.h  FrustumCuller.cpp  FrustumCuller.h  LODEvaluator.cpp  LODEvaluator.h  LightManager.cpp  LightManager.h  Lights.cpp  Lights.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneNode.cpp  SceneNode.h  Screen.cpp  Screen.h  Transform.cpp  Transform.h
src/Utilities/: Config.h  GPUQuery.cpp  GPUQuery.h  Logger.cpp  Logger.h  ProfilerMacros.h  ThreadPool.cpp  ThreadPool.h  ThreadPoolManager.cpp  ThreadPoolManager.h  Utility.cpp  Utility.h
tests/: AllTests.h  Test.cpp  Test.h  Test3D.cpp  TestAssimp.cpp  TestAssimp.h  TestBistro.cpp  TestBistro.h  TestClearColor.cpp  TestClearColor.h  TestComputeShader.cpp  TestComputeShader.h  TestDamagedHelmet.cpp  TestDamagedHelmet.h  TestFlipBookEffect.cpp  TestFlipBookEffect.h  TestInstance.cpp  TestInstance.h  TestLights.cpp  TestLights.h  TestManager.cpp  TestManager.h  TestMenu.cpp  TestMenu.h  TestPBR.cpp  TestPBR.h  TestScene.cpp  TestScene.h  TestShadows.cpp  TestShadows.h  TestSimpleCube.cpp  TestSimpleCube.h  TestSkyBox.cpp  TestSkyBox.h  TestSkyBoxReflection.cpp  TestSkyBoxReflection.h  TestTerrain.cpp  TestTerrain.h  TestTexture2D.cpp  TestTexture2D.h
(+77 files in other folders)
